<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:backgroundTint="@color/purple_500"
    android:backgroundTintMode="multiply"
    android:background="@drawable/background_leaves_green">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_official_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="60sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxCornerRadiusBottomEnd="@dimen/cornerRadius"
                app:boxCornerRadiusBottomStart="@dimen/cornerRadius"
                app:boxCornerRadiusTopEnd="@dimen/cornerRadius"
                app:boxCornerRadiusTopStart="@dimen/cornerRadius"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView"
                app:placeholderText="@string/example_mail"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp" />
                <!--android:fontFamily="@font/google_sans_regular"-->
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:boxCornerRadiusBottomEnd="@dimen/cornerRadius"
                app:boxCornerRadiusBottomStart="@dimen/cornerRadius"
                app:boxCornerRadiusTopEnd="@dimen/cornerRadius"
                app:boxCornerRadiusTopStart="@dimen/cornerRadius"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hapticFeedbackEnabled="true"
                android:text="@string/show_password"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/help_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hapticFeedbackEnabled="true"
                android:text="@string/password_rules"
                android:visibility="invisible"
                app:cornerRadius="@dimen/cornerRadius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/show_password"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/user_and_password_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:enabled="false"
                android:hapticFeedbackEnabled="true"
                android:text="@string/login_prompt"
                app:cornerRadius="@dimen/cornerRadius"
                app:layout_constraintEnd_toStartOf="@+id/guest_login"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/guest_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:enabled="true"
                android:hapticFeedbackEnabled="true"
                android:text="login as guest"
                app:cornerRadius="@dimen/cornerRadius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/show_password"
                app:layout_constraintStart_toEndOf="@+id/login_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/google_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#AD0650BF"
                android:hapticFeedbackEnabled="true"
                android:text="@string/continue_with_google"
                android:visibility="gone"
                app:cornerRadius="@dimen/cornerRadius"
                app:icon="@drawable/ic_google"
                app:iconSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_and_password_login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:backgroundTint="#343D8C"
                android:hapticFeedbackEnabled="true"
                android:text="@string/continue_with_facebook"
                app:cornerRadius="@dimen/cornerRadius"
                android:visibility="gone"
                app:icon="@drawable/ic_facebook"
                app:iconSize="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/google_button" />

            <TextView
                android:id="@+id/new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hapticFeedbackEnabled="true"
                android:text="@string/new_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>